@@ -13,6 +13,7 @@
     &#8226; Slight style changes for UI<br/>
     &#8226; Live streaming of mentions<br/>
     &#8226; Fixed the max tweets to download option for some<br/>
+    &#8226; Updated Twitter4j<br/>
 </br><br/>
 
 <b>Version 2.1.6:</b><br/><br/>
